Fix mobile/tablet visibility

--- a/app/src/shared/components/Search/search.pcss
+++ b/app/src/shared/components/Search/search.pcss
@@ -3,7 +3,8 @@
   align-items: center;
   border-bottom: 2px solid transparent;
   width: 0%;
-  max-width: 1px;
+  max-width: 1px; /* this is needed for animating the width transition smoothly, cannot be 0 */
+  min-width: 1px;
   transition: all 0.3s ease;
 }
 
@@ -11,6 +12,7 @@
   border-bottom: 2px solid #FF5C00;
   width: 100%;
   max-width: 1000px; /* this is needed for animating the width transition smoothly */
+  min-width: 160px;
 }
 
 .searchInput {
