--- a/app/src/userpages/components/Header/header.pcss
+++ b/app/src/userpages/components/Header/header.pcss
@@ -41,12 +41,14 @@
 
 .tabBar {
   display: flex;
+  line-height: 32px;
 }
 
 .searchBar {
   display: flex;
   margin-right: 36px;
   height: 39px;
+  max-width: 190px;
 }
 
 .filterBar {
